fix mobile css index.html spacing divs

--- a/css/styles.css
+++ b/css/styles.css
@@ -1095,7 +1095,7 @@ img {
   }
   .container-fluid-timezone-mobile {
     display: grid;
-    margin-top: 80vh;
+    margin-top: 78vh; /*80vh*/
     padding-bottom: 9%;
   }
   .mobile-only {
@@ -1109,14 +1109,22 @@ img {
   }
   /*flexbox city times*/
   .childcity {
-    padding: 0px 0px 15px 0px;
+    padding: 0px 0px 21px 0px;
+    margin-bottom: .6rem;
   }
-  .childcity .citynameNY {
-    padding: 0px 0px 15px 0px;
+  .citynameNY {
+    /* padding: 0px 0px 15px 0px; */
+    padding-bottom: 6px;
   }
   .cityname {
-    padding: 0px;
-    margin-bottom: .6rem;
+    padding-bottom: 6px;
+    /* padding: 0px; */
+     /*.6rem*/
+  }
+  .citynameNY {
+    /* padding: 0px; */
+    margin-bottom: 0.9rem;
+    margin-bottom: .6rem; /*.6rem*/
   }
   p,
   span {
